[package]
name = "korg-syro-sys"
description = "Rust FFI bindings for the KORG SYRO library for interacting with the Volca Sample"
repository = "https://github.com/glindstedt/korg-syro-sys"
license = "LGPL-3.0-or-later"
version = "0.1.0"
authors = ["Gustaf Lindstedt <gustaflindstedt@protonmail.com>"]
edition = "2018"
keywords = ["audio", "bindings"]
categories = ["multimedia::audio", "external-ffi-bindings"]

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0.61"

[dev-dependencies]
anyhow = "1.0"
clap = "2.33"
korg-syro-sys = { path = "." }
wav = "0.4.1"
